# iot-sentinel

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
results/ciciot2023/: autoencoder.json  dummy.json  extra_trees.json  federated_sgd.json  gaussian_nb.json  hist_gb.json  isolation_forest.json  logistic_regression.json  mlp.json  random_forest.json  sgd.json  xgboost.json
results/edge_iiotset/: autoencoder.json  dummy.json  extra_trees.json  federated_sgd.json  gaussian_nb.json  hist_gb.json  isolation_forest.json  logistic_regression.json  mlp.json  random_forest.json  sgd.json  xgboost.json
results/ton_iot/: autoencoder.json  dummy.json  extra_trees.json  federated_sgd.json  gaussian_nb.json  hist_gb.json  isolation_forest.json  logistic_regression.json  mlp.json  random_forest.json  sgd.json  xgboost.json
src/: datasets.py
src/data/: audit.py  download.py  load_edge-iiotset.py
src/preprocessing/: __init__.py  ciciot2023.py  common.py  edge_iiotset.py  taxonomy.py  ton_iot.py
src/strategies/: README.md  __init__.py  _eval.py  autoencoder.py  dummy.py  extra_trees.py  federated_sgd.py  gaussian_nb.py  hist_gb.py  isolation_forest.py  lof.py  logistic_regression.py  mlp_clf.py  random_forest.py  sgd_clf.py  xgboost_clf.py
